Bug#30480: Falcon: searches fail if LIKE and key partition (also fixes the bugs: Bug#29320, Bug#29493 and Bug#30536)

Problem: Partitioning did not handle unordered scans correctly
for engines with unordered read order.

Solution: do not stop scanning fi a recored is out of range, since
there can be more records within the range afterwards.

Note: this is the patch that fixes the bug, but since there are no
storage engines shipped with mysql 5.1 (falcon comes in 6.0) there
are no test cases (it is a separate patch that only goes into 6.0)


sql/ha_partition.cc:
  Bug#30480: Falcon: searches fail if LIKE and key partition
  
  Problem was that partitioning did not handle unordered scans correctly
  for engines with unordered read order.
  
  Solution: do not stop if a recored is out of range, since it can come
  more records within the range afterwards