sql/ha_partition.cc
@@ -3983,7 +3983,8 @@ int ha_partition::handle_unordered_next(uchar *buf, bool is_next_same)
   }
   else if (!(error= file->index_next(buf)))
   {
-    if (compare_key(end_range) <= 0)
+    if (!(file->table_flags() & HA_READ_ORDER) ||
+        compare_key(end_range) <= 0)
     {
       m_last_part= m_part_spec.start_part;
       DBUG_RETURN(0);                           // Row was in range
@@ -4060,7 +4061,8 @@ int ha_partition::handle_unordered_scan_next_partition(uchar * buf)
     }
     if (!error)
     {
-      if (compare_key(end_range) <= 0)
+      if (!(file->table_flags() & HA_READ_ORDER) ||
+          compare_key(end_range) <= 0)
       {
         m_last_part= i;
         DBUG_RETURN(0);
